crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__reports_unterminated_block_comments.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
/* c

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
  Eof "" @ 4..4 leading=[UnterminatedBlockComment "/* c"]

diagnostics:
  code=java.lex.unterminated_block_comment severity=Error stage=Lexer range=0..1 message="unterminated block comment"

diagnostics:
code=java.lex.unterminated_block_comment severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(1) }) message=unterminated block comment
