crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__reports_unterminated_text_blocks.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"""
abc

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    BogusTypeDeclaration
      TextBlockLiteral "\"\"\"\nabc" @ 0..7
  Eof "" @ 7..7

diagnostics:
  code=java.lex.unterminated_text_block severity=Error stage=Lexer range=0..7 message="unterminated text block"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..7 message="unexpected token at top level"

diagnostics:
code=java.lex.unterminated_text_block severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(7) }) message=unterminated text block
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(7) }) message=unexpected token at top level
