crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__respects_unicode_escape_backslash_eligibility.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
\\u0061 \u005c\u0061 \u005cu0061

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    BogusTypeDeclaration
      Unknown "\\" @ 0..1
      Unknown "\\" @ 1..2
      Identifier "u0061" @ 2..7 trailing=[Whitespace " "]
      Unknown "\\" @ 8..9
      Identifier "a" @ 9..10 trailing=[Whitespace " "]
      Unknown "\\" @ 11..12
      Identifier "u0061" @ 12..17
  Eof "" @ 17..17

diagnostics:
  code=java.lex.unknown_character severity=Error stage=Lexer range=0..1 message="unknown character"
  code=java.lex.unknown_character severity=Error stage=Lexer range=1..2 message="unknown character"
  code=java.lex.unknown_character severity=Error stage=Lexer range=8..9 message="unknown character"
  code=java.lex.unknown_character severity=Error stage=Lexer range=11..12 message="unknown character"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..1 message="unexpected token at top level"

diagnostics:
code=java.lex.unknown_character severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(1) }) message=unknown character
code=java.lex.unknown_character severity=Error stage=Lexer range=Some(TextRange { start: TextSize(1), end: TextSize(2) }) message=unknown character
code=java.lex.unknown_character severity=Error stage=Lexer range=Some(TextRange { start: TextSize(8), end: TextSize(9) }) message=unknown character
code=java.lex.unknown_character severity=Error stage=Lexer range=Some(TextRange { start: TextSize(11), end: TextSize(12) }) message=unknown character
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(1) }) message=unexpected token at top level
