crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__two_digit_octal_escape_before_non_octal_digit_falls_back_02.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
'\378'

syntax:
syntax:
CompilationUnit
  ErrorNode
    CharacterLiteral "'\\378'" @ 0..6
  Eof "" @ 6..6

diagnostics:
  code=java.lex.invalid_character_literal severity=Error stage=Lexer range=0..6 message="invalid character literal"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..6 message="unexpected token at top level"

diagnostics:
code=java.lex.invalid_character_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(6) }) message=invalid character literal
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(6) }) message=unexpected token at top level
