crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__two_digit_octal_escape_followed_by_digit_is_valid_in_string_literals.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"\477"

syntax:
syntax:
CompilationUnit
  ErrorNode
    StringLiteral "\"\\477\"" @ 0..6
  Eof "" @ 6..6

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..6 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(6) }) message=unexpected token at top level
